# rubiks-cube

./: .gitignore  CMakeLists.txt  README.md
src/: cube_tester.c  cube_tester.h  main.c  move.c  move.h  rubiks.c  rubiks.h  solve.c  solve.h
